fix: adjust spacing below locality

--- a/src/assets/styles/components/_card.scss
+++ b/src/assets/styles/components/_card.scss
@@ -78,6 +78,7 @@
 		.card__byline,
 		.card__locality,
 		.card__description,
+		.card__info,
 		.card__tags {
 			margin-top: 0.375rem;
 		}
